--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,6 +9,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 git2 = "0.20"
 rusqlite = { version = "0.33", features = ["bundled"] }
+regex = "1"
 
 [dev-dependencies]
 tempfile = "3"
